# COrdering

./: CHANGELOG  CHANGELOG.md  COrdering.cabal
.github/workflows/: haskell-ci.yml
Data/: COrdering.hs
